@@ -35,9 +35,9 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.named('test') {
 	useJUnitPlatform()
-	jvmArgs += ["--add-modules", "jdk.incubator.vector"]
+	jvmArgs += ["--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED"]
 }
 
 tasks.named('bootRun') {
-	jvmArgs += ["--add-modules", "jdk.incubator.vector"]
+	jvmArgs += ["--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED"]
 }
